--- a/.gitignore
+++ b/.gitignore
@@ -26,20 +26,15 @@
 
 ## Build tool auxiliary files:
 *.fdb_latexmk
-*.synctex
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
 
 ## Auxiliary and intermediate files from other packages:
 
-
 # algorithms
 *.alg
 *.loa
-
-# achemso
-acs-*.bib
 
 # amsthm
 *.thm
@@ -71,16 +66,8 @@ acs-*.bib
 *.glo
 *.gls
 
-# gnuplottex
-*-gnuplottex-*
-
 # hyperref
 *.brf
-
-# knitr
-*-concordance.tex
-*.tikz
-*-tikzDictionary
 
 # listings
 *.lol
@@ -94,18 +81,13 @@ acs-*.bib
 # minitoc
 *.maf
 *.mtc
-*.mtc[0-9]
-*.mtc[1-9][0-9]
+*.mtc0
 
 # minted
-_minted*
 *.pyg
 
 # morewrites
 *.mw
-
-# mylatexformat
-*.fmt
 
 # nomencl
 *.nlo
@@ -120,20 +102,11 @@ _minted*
 *.sympy
 sympy-plots-for-*.tex/
 
-# TikZ & PGF
-*.dpth
-*.md5
-*.auxlock
-
 # todonotes
 *.tdo
 
 # xindy
 *.xdy
-
-# WinEdt
-*.bak
-*.sav
 
 # =========================
 # Operating System Files
@@ -149,13 +122,9 @@ sympy-plots-for-*.tex/
 # Thumbnails
 ._*
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
+# Files that might appear on external disk
 .Spotlight-V100
-.TemporaryItems
 .Trashes
-.VolumeIcon.icns
 
 # Directories potentially created on remote AFP share
 .AppleDB
